paper nagelezen en nog wat bijgewerkt

--- a/bachproef/VerhoeyenLisaBP.tex
+++ b/bachproef/VerhoeyenLisaBP.tex
@@ -48,6 +48,12 @@
 }
 
 % Other packages not already included can be imported here
+\usepackage{listings}
+\lstset{
+	basicstyle=\ttfamily,
+	breaklines=true,
+	breakatwhitespace=true
+}
 
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
