--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -137,7 +137,7 @@
 }
 
 @Thesis{Gussem2022,
-  author      = {Sibian De Gussem},
+  author      = {De Gussem, Sibian},
   date        = {2022},
   institution = {HOGENT},
   title       = {Nursery Tone Monitor: detecteren van elderspeak via AI},
@@ -161,7 +161,7 @@
 }
 
 @Thesis{Schryver2024,
-  author      = {Bianca De Schryver},
+  author      = {De Schryver, Bianca},
   date        = {2024},
   institution = {HOGENT},
   title       = {Whisper Spraak-naar-tekstmodel testen voor het monitoren van 'secondary babytalk' in de zorgverlening.},
