--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -17,4 +17,4 @@ Ik wil in de eerste plaats mijn co-promotor dhr. Jorrit Campens bedanken voor he
 
 Ook wil ik graag mijn promotor mevr. Veerle Depestele bedanken voor de opvolgingen tijdens mijn onderzoek en het geven van feedback waar nodig. Ik ben ervan overtuigd dat dit geholpen heeft om deze bachelorproef tot een goed einde te brengen.
 
-Tenslotte wil ik ook mijn familie en vrienden bedanken die mij gesteund hebben doorheen deze bachelorproef, maar ook gedurende de opleiding die mij tot deze bachelorproef geleid heeft.
+Tenslotte wil ik ook mijn familie en vrienden bedanken die mij niet alleen gesteund hebben doorheen deze bachelorproef, maar ook gedurende de opleiding die mij tot deze bachelorproef geleid heeft.
