--- a/bachproef/bespreking.tex
+++ b/bachproef/bespreking.tex
@@ -14,10 +14,10 @@ Aangezien het trainen op een databank met zowel audio van de televisieprogramma'
 
 \section{Mogelijke oplossingen}
 \label{sec:opl}
-Gezien de resultaten die in dit onderzoek verkregen zijn, lijken er drie grote mogelijkheden te zijn voor verder onderzoek. Een eerste mogelijkheid is de databank behouden zoals ze nu is, met uitzondering van het gebruiken van een ruisfilter op de data van het Zorglab om zo hopelijk ervoor te zorgen dat het trainen voor een accurater resultaat zorgt. Al dan niet is het ook mogelijk dat dit gecombineerd zal moeten worden met het gebruiken van een ruisfilter voor de audio die door de pipeline gescheiden moet worden. Aangezien er al een ruisfilter aanwezig is in de bestaande applicatie, lijkt het een goede optie om van daaruit te vertrekken.
+Gezien de resultaten die in dit onderzoek verkregen zijn, lijken er drie grote mogelijkheden te zijn voor verder onderzoek. Een eerste mogelijkheid is de databank behouden zoals ze nu is, met uitzondering van het gebruiken van een ruisfilter op de data van het Zorglab om zo hopelijk ervoor te zorgen dat het trainen voor een accurater resultaat zorgt. Het is mogelijk dat dit ook gecombineerd zal moeten worden met het gebruiken van een ruisfilter op de audio die door de pipeline gescheiden moet worden. Aangezien er al een ruisfilter aanwezig is in de bestaande applicatie, lijkt het een goede optie om van daaruit te vertrekken.
 
 Een tweede mogelijkheid voor verder onderzoek is het toevoegen van een grote hoeveelheid extra data. Deze data zou zowel duidelijke als onduidelijke audio bevatten. De databank in dit onderzoek is relatief beperkt omdat creëren van de RTTM bestanden een zeer tijdrovende taak is, dus een significant grotere databank zou voor een beter resultaat kunnen zorgen.
 
 De derde mogelijkheid is het opsplitsen van de databank en het trainen van het segmentatie model op beide databanken. De eerste databank zou dan bestaan uit enkel duidelijke audio van bijvoorbeeld televisieprogramma's, terwijl de tweede databank puur zou bestaan uit data die opgenomen werd in het Zorglab.
 
-Afhankelijk van de effecten van deze drie opties, lijkt het ook mogelijk dat er een combinatie van deze aanpakken nodig is.
+Afhankelijk van de effecten van deze drie opties, lijkt het ook mogelijk dat er een combinatie van deze drie aanpakken nodig is.
