--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -20,8 +20,8 @@ Voor de eerste onderzoeksvraag werd gezocht naar reeds bestaande modellen waarva
 
 De tweede onderzoeksvraag ging over het al dan niet kunnen verder trainen van reeds bestaande modellen. Hier werd ondervonden dat het wel degelijk mogelijk is om pyannote-audio verder te trainen aan de hand van Vlaamse audio.
 
-Wanneer het komt op de beste parameters om dit model te trainen, werd er voornamelijk gebaseerd op een voorbeeld notebook die kan gevonden worden op de GitHub pagina van het model. Hierbij werden ook een aantal parameters gezocht door een optimizer. De enige parameter waar tijdens het onderzoek zelf naar een eventueel betere waarde gezocht werd, is het maximum aantal epochs voor het trainen van het model. Zo werden dus de meest ideale parameters gevonden.
+Wanneer het komt op de beste parameters om dit model te trainen, werd er voornamelijk gebaseerd op de parameters uit een voorbeeld notebook die kan gevonden worden op de GitHub pagina van het model. Hierbij werden ook een aantal parameters gezocht door een optimizer. De enige parameter waar tijdens het onderzoek zelf naar een eventueel betere waarde gezocht werd, is het maximum aantal epochs voor het trainen van het model. Zo werden dus de meest ideale parameters gevonden.
 
-De laatste vraag had als doel een manier te vinden om het model te implementeren in de applicatie. Hierop is echter geen antwoord in deze bachelorproef. Aangezien het trainen uiteindelijk niet het gewenste resultaat had, werd nog niet gezocht naar een manier om de pipeline getrainde te implementeren, maar eerder gebrainstormd over wat volgende stappen zouden kunnen zijn om te leiden tot een betere DER na het trainen.
+De laatste vraag had als doel een manier te vinden om het model te implementeren in de applicatie. Hierop heeft deze bachelorproef echter geen antwoord. Aangezien het trainen uiteindelijk niet het gewenste resultaat had, werd nog niet gezocht naar een manier om de getrainde pipeline te implementeren, maar wel gebrainstormd over wat volgende stappen zouden kunnen zijn om te leiden tot een betere DER na het trainen.
 
-Als conclusie van deze bachelorproef kan dus gesteld worden dat, hoewel er modellen gevonden werden die verder getraind kunnen worden, het doel van het onderzoek niet behaald werd. Er werden echter wel manieren bedacht hoe verder onderzoek kan leiden tot een beter resultaat dat wel in de applicatie voor elderspeak detectie kan geïmplementeerd worden. Deze opties voor verder onderzoek bestaan uit het toepassen van een ruisfilter op de audio bestanden, het trainen op significant meer data en het trainen op twee verschillende databanken.
+Als conclusie van deze bachelorproef kan dus gesteld worden dat, hoewel er modellen gevonden werden die verder getraind kunnen worden, het uiteindelijke doel van het onderzoek niet behaald werd. Er werden echter wel manieren bedacht hoe verder onderzoek kan leiden tot een beter resultaat dat wel in de applicatie voor elderspeak detectie kan geïmplementeerd worden. Deze opties voor verder onderzoek bestaan uit het toepassen van een ruisfilter op de audio bestanden, het trainen op significant meer data en het trainen op twee verschillende databanken.
