--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -45,9 +45,9 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-Ondanks het feit dat de zorgsector de dag van vandaag vooral op persoonsgerichte zorgverlening focust, ervaren oudere patiënten vaak dat de communicatie te betuttelend is. Dit fenomeen staat bekend als elderspeak of secondary babytalk. Om dit tegen te gaan is er vanuit de opleiding verpleegkunde aan HOGENT het initiatief genomen om een applicatie te gebruiken die de studenten erop wijst als ze gebruik maken van elderspeak. Deze applicatie werd reeds ontworpen in voorgaande bachelorproeven, maar er ontbreken nog een aantal functionaliteiten voordat deze gebruikt kan worden in de opleiding.
+Ondanks het feit dat de zorgsector de dag van vandaag vooral op persoonsgerichte zorgverlening focust, ervaren oudere patiënten vaak dat de communicatie te betuttelend is. Dit fenomeen staat bekend als elderspeak of secondary babytalk. Om dit tegen te gaan is er vanuit de opleiding verpleegkunde aan HOGENT het initiatief genomen om een applicatie te gebruiken die de studenten erop wijst als ze gebruik maken van elderspeak. Deze applicatie werd reeds ontworpen in voorgaande bachelorproeven aan HOGENT, maar er ontbreken nog een aantal functionaliteiten voordat deze gebruikt kan worden in de opleiding.
 
-Deze bachelorproef heeft als doel een model te trainen dat stemmen kan onderscheiden en dit te implementeren in de applicatie zodat de optie bestaat om enkel de stem van de zorgverlener te analyseren op signalen van secondary baby talk. Hiervoor werd eerst onderzoek gedaan naar bestaande modellen, waarna deze modellen getest werden op bruikbaarheid voor deze bachelorproef. Na deze testen werd gekozen om verder te gaan met pyannote-audio. Dit model werd verder getraind met Vlaamse audio.
+Deze bachelorproef heeft als doel een model te trainen dat stemmen kan onderscheiden en dit te implementeren in de applicatie zodat de optie bestaat om enkel de stem van de zorgverlener te analyseren op signalen van secondary babytalk. Hiervoor werd eerst onderzoek gedaan naar bestaande modellen, waarna deze modellen getest werden op bruikbaarheid voor deze bachelorproef. Na deze testen werd gekozen om verder te gaan met pyannote-audio. Dit model werd verder getraind met Vlaamse audio.
 
-Na het trainingsproces moest geconcludeerd worden dat de resultaten van het trainen nog niet goed genoeg zijn en er dus geen implementatie in de applicatie kon gebeuren. Er zijn wel enkele mogelijkheden voor verder onderzoek. Het gebruik van een ruisfilter, trainen op meer data of trainen op twee verschillende databanken zouden kunnen leiden tot een beter resultaat, waarna implementatie in de applicatie kan gebeuren.
+Na het trainingsproces moest geconcludeerd worden dat de resultaten van het trainen nog niet accuraat genoeg zijn en er dus geen implementatie in de applicatie kon gebeuren. Dit leidde wel tot enkele mogelijkheden voor verder onderzoek. Het gebruik van een ruisfilter, trainen op meer data of trainen op twee verschillende databanken zouden kunnen leiden tot een beter resultaat, waarna implementatie in de applicatie kan gebeuren.
 
