--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -27,7 +27,7 @@ Het onderzoek van \textcite{Schryver2024} had als doel om spraak naar tekst om t
 %TODO: nog meer info nodig!
 Wanneer gezocht wordt naar manieren om stemmen te onderscheiden, is "speaker diarization`` een term die vaak vermeld wordt. Speaker diarization wordt beschreven als het bepalen wie wanneer spreekt in een audio of video opname waarvaan niet geweten is hoe vaak gesproken wordt en hoeveel sprekers aanwezig zijn \autocite{AngueraMiro2012}. Het feit dat er onbekende factoren in de fragmenten aanwezig zijn, zorgt ervoor dat unsupervised identificatie van elke spreker in een audio fragment en de intervallen waarin deze spreker actief is, vereist zijn \autocite{AngueraMiro2012}. Volgens \textcite{AngueraMiro2012} kunnen de speaker diarization technieken op gedeeld worden in twee categorieën, namelijk bottom-up en top-down modellen. Bottom-up modellen worden geïnitialiseerd met een grote hoeveelheid clusters, vaak meer dan het verwachte aantal sprekers, en convergeren op een iteratieve manier naar een optimaal aantal clusters die gewoonlijk overeen komt met de hoeveelheid sprekers \autocite{AngueraMiro2012}. Top-down modellen worden geïnitialiseerd met een klein aantal clusters, gewoonlijk één cluster, en convergeren dan ook op een iteratieve manier naar een optimaal aantal clusters \autocite{AngueraMiro2012}. Volgens \textcite{AngueraMiro2012} worden de bottom-up modellen het vaakst gebruikt.
 
-In \textcite{Khoma2023} wordt ook gesproken over twee categorieën van diarization, maar hier worden ze anders opgedeeld. De eerste categorie die in \textcite{Khoma2023} vermeld wordt is unsupervised diarization. Deze techniek maakt gebruik van unsupervised machine learning algoritmen om elke spreker een label te geven waarbij niet geweten is welke persoon bij welk label hoort \autocite{Khoma2023}. De tweede categorie is supervised diarization, waarin diarization methoden gecombineerd worden met identificatie technieken om zo een of meerdere personen uit een opname te kunnen herkennen \autocite{Khoma2023}. Deze techniek heeft als belangrijke eigenaardigheid dat het nodig is om de uitingen van meer dan een persoon te analyseren\autocite{Khoma2023}. Unsupervised diarization maakt gebruik van clustering methodes waarbij gelijkaardige segmenten onderverdeeld worden in categorieën, terwijl supervised diarization gebruik maakt van classificatie, waarbij de verschillende segmenten vergeleken worden met stemvoorbeelden \autocite{Khoma2023}.
+Door \textcite{Khoma2023} wordt ook gesproken over twee categorieën van diarization, maar hier worden ze anders opgedeeld. De eerste categorie die door \textcite{Khoma2023} vermeld wordt is unsupervised diarization. Deze techniek maakt gebruik van unsupervised machine learning algoritmen om elke spreker een label te geven waarbij niet geweten is welke persoon bij welk label hoort \autocite{Khoma2023}. De tweede categorie is supervised diarization, waarin diarization methoden gecombineerd worden met identificatie technieken om zo een of meerdere personen uit een opname te kunnen herkennen \autocite{Khoma2023}. Deze techniek heeft als belangrijke eigenaardigheid dat het nodig is om de uitingen van meer dan een persoon te analyseren\autocite{Khoma2023}. Unsupervised diarization maakt gebruik van clustering methodes waarbij gelijkaardige segmenten onderverdeeld worden in categorieën, terwijl supervised diarization gebruik maakt van classificatie, waarbij de verschillende segmenten vergeleken worden met stemvoorbeelden \autocite{Khoma2023}.
 
 \textcite{Zhang2018} stelt dat de meeste diarization systemen bestaan uit, maar niet gelimiteerd zijn tot, de volgende relatief onafhankelijke componenten:
 \begin{itemize}
@@ -47,10 +47,9 @@ Ongeacht hoe de diarization aangepakt wordt, zijn er ook manieren om de accuraat
 \end{itemize}
 DER is de populairste methode om de accuraatheid van een model te bepalen. De accuraatheid wordt berekend door de som te nemen van de gemiste spraakdetectie, het labelen van de verkeerde spreker en het vals alarm voor spraak. Dit wordt gedeeld door de totale tijd. DER is een inschatting voor het geheel. \autocite{Park2021}
 
-JER heeft als doel om elke spreker hetzelfde gewicht te geven in de evaluatie door rekening te houden met de tijd dat een spreker aan bod komt en het aantal sprekers in het audio fragment\autocite{Park2021}.
+JER heeft als doel om elke spreker hetzelfde gewicht te geven in de evaluatie door rekening te houden met de tijd dat een spreker aan bod komt en het aantal sprekers in het audio fragment \autocite{Park2021}.
 
 World-level DER wordt voornamelijk gebruikt om de fouten te meten die aan de output transcriptie kant veroorzaakt worden. Het bekijkt de afwijking tussen de DER en de accuraatheid van de uiteindelijke transcriptie, aangezien de duur van het spreken niet altijd in lijn ligt met de grenzen van woorden. \autocite{Park2021}
-
 
 \section{Reeds bestaande modellen}
 \label{sec:bestaande-modellen}
