--- a/poster/conference_poster.tex
+++ b/poster/conference_poster.tex
@@ -9,22 +9,22 @@
 % Info over de opleiding
 \course{Bachelorproef}
 \studyprogramme{toegepaste informatica}
-\academicyear{2022-2023}
+\academicyear{2024-2025}
 \institution{Hogeschool Gent, Valentin Vaerwyckweg 1, 9000 Gent}
 
 % Info over de bachelorproef
-\title{Titel van uw bachelorproef}
-\subtitle{Ondertitel (eventueel)}
-\author{Voornaam Naam}
-\email{voornaam.familienaam@student.hogent.be}
-\supervisor{Voornaam Naam}
-\cosupervisor{Voornaam Naam (Bedrijf)}
+\title{Stemmen onderscheiden voor het opsporen van elderspeak in de Vlaamse zorgcontext}
+%\subtitle{Ondertitel (eventueel)}
+\author{Lisa Verhoeyen}
+\email{lisa.verhoeyen@student.hogent.be}
+\supervisor{Veerle Depestele}
+\cosupervisor{Jorrit Campens (HOGENT)}
 
 % Indien ingevuld, wordt deze informatie toegevoegd aan het einde van de
 % abstract. Zet in commentaar als je dit niet wilt.
-\specialisation{Systeem- en Netwerkbeheer}
-\keywords{Lambda-calculus, Scheme}
-\projectrepo{https://github.com/user/repo}
+\specialisation{AI \& Data Engineering}
+\keywords{speaker diarization, stemmen onderscheiden, elderspeak}
+\projectrepo{https://github.com/LisaVerhoeyen/bp-stemmen-onderscheiden}
 
 \begin{document}
 
