--- a/bachproef/bespreking.tex
+++ b/bachproef/bespreking.tex
@@ -10,14 +10,18 @@ In dit hoofdstuk worden de resultaten van het onderzoek verder besproken en word
 \label{sec:bespr-res}
 Zoals vermeld werd in hoofdstuk \ref{ch:resultaten}, waren de resultaten voor de audio van Vlaamse televisieprogramma's significant beter dan die voor audio die opgenomen werd in het Zorglab. Een mogelijke verklaring hiervoor kan zijn dat de audio van de televisieprogramma's duidelijker is en minder ruis bevat, waardoor het model het gemakkelijker heeft om een onderscheid te maken tussen de verschillende stemmen. In de eerste versie van de databank werd onder andere gebruik gemaakt van bepaalde audio bestanden die achtergrond geluid bevatten zoals fragmenten waarin muziek afgespeeld werd of die applaus van publiek bevatten. Dit werd gedaan om mogelijks de effecten van ruis na te bootsen, zodat het model ook zou kunnen werken op audio die ruis bevat. Dit bleek echter niet voldoende te zijn, waardoor de keuze gemaakt werd om audio van het Zorglab toe te voegen.
 
-Aangezien het trainen op een databank met zowel audio van de televisieprogramma's als die van het Zorglab zorgde voor een toename in de DER, was dit blijkbaar ook niet de juiste keuze. Mogelijks heeft het gebruik van audio die ruis bevat dus een nadelig effect op het trainingsproces. 
+In hoofdstuk \ref{ch:resultaten} werd ook vermeld dat er een ruisfilter werd toegepast op de audio voor het trainen. Dit werd gedaan in een poging om de kwaliteit van de audio uit het zorglab beter te maken en zo succesvoller te kunnen trainen. Dit had echter een omgekeerd effect. Een mogelijke oorzaak hiervoor was dat de ruisfilter er niet enkel voor zorgde dat er minder ruis was, maar ook dat de stemmen en gesprekken minder duidelijk werden in de audio. De ruisfilter blijkt dus ook niet voor een oplossing te zorgen.
+
+Uiteindelijk werd er dus teruggekeerd naar de oorspronkelijke databank met enkele kleine aanpassingen. Deze aanpassingen gaven een lagere accuraatheid voor het trainen dan de eerste versie van de databank, maar er was wel een groter verschil met de accuraatheid na het trainen dan in de eerste versie, wat dus mogelijks voor het beste resultaat zorgt. Het was mogelijks nog beter geweest als er meer data toegevoegd werd aan deze versie van de databank, maar hier was geen tijd meer voor binnen dit onderzoek. 
 
 \section{Mogelijke oplossingen}
 \label{sec:opl}
-Gezien de resultaten die in dit onderzoek verkregen zijn, lijken er drie grote mogelijkheden te zijn voor verder onderzoek. Een eerste mogelijkheid is de databank behouden zoals ze nu is, met uitzondering van het gebruiken van een ruisfilter op de data van het Zorglab om zo hopelijk ervoor te zorgen dat het trainen voor een accurater resultaat zorgt. Het is mogelijk dat dit ook gecombineerd zal moeten worden met het gebruiken van een ruisfilter op de audio die door de pipeline gescheiden moet worden. Aangezien er al een ruisfilter aanwezig is in de bestaande applicatie, lijkt het een goede optie om van daaruit te vertrekken.
+Gezien de resultaten die in dit onderzoek verkregen zijn, lijken er enkele mogelijkheden te zijn voor verder onderzoek. Een eerste mogelijkheid is om ervoor te zorgen dat de audio in het Zorglab opgenomen wordt met een betere kwaliteit, bijvoorbeeld door ervoor te zorgen dat er minder ruis aanwezig is.
 
-Een tweede mogelijkheid voor verder onderzoek is het toevoegen van een grote hoeveelheid extra data. Deze data zou zowel duidelijke als onduidelijke audio bevatten. De databank in dit onderzoek is relatief beperkt omdat creëren van de RTTM bestanden een zeer tijdrovende taak is, dus een significant grotere databank zou voor een beter resultaat kunnen zorgen.
+Een tweede mogelijkheid is het significant uitbreiden van de databank, gebruik makend van zowel duidelijke audio als minder duidelijke audio. De databank in dit onderzoek is relatief beperkt omdat creëren van de RTTM bestanden een zeer tijdrovende taak is, dus een significant grotere databank zou voor een beter resultaat kunnen zorgen.
 
-De derde mogelijkheid is het opsplitsen van de databank en het trainen van het segmentatie model op beide databanken. De eerste databank zou dan bestaan uit enkel duidelijke audio van bijvoorbeeld televisieprogramma's, terwijl de tweede databank puur zou bestaan uit data die opgenomen werd in het Zorglab.
+De derde mogelijkheid is het opsplitsen van de tweede versie van de databank en het trainen van het segmentatie model op beide databanken. De eerste databank zou dan bestaan uit enkel duidelijke audio van bijvoorbeeld televisieprogramma's, terwijl de tweede databank puur zou bestaan uit data die opgenomen werd in het Zorglab.
 
-Afhankelijk van de effecten van deze drie opties, lijkt het ook mogelijk dat er een combinatie van deze drie aanpakken nodig is.
+Afhankelijk van de effecten van deze drie opties, lijkt het ook mogelijk dat er een combinatie van deze drie aanpakken nodig is. Zo kan er bijvoorbeeld nieuwe audio opgenomen in het Zorglab waarbij de hoeveelheid ruis beperkter is. Deze data kan dan toegevoegd worden aan de derde versie van de databank uit dit onderzoek, in combinatie met duidelijkere audio van bijvoorbeeld televisieprogramma's.
+
+
