--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -24,4 +24,4 @@ Wanneer het komt op de beste parameters om dit model te trainen, werd er voornam
 
 De laatste vraag had als doel een manier te vinden om het model te implementeren in de applicatie. Hierop heeft deze bachelorproef echter geen antwoord. Aangezien het trainen uiteindelijk niet het gewenste resultaat had, werd nog niet gezocht naar een manier om de getrainde pipeline te implementeren, maar wel gebrainstormd over wat volgende stappen zouden kunnen zijn om te leiden tot een betere DER na het trainen.
 
-Als conclusie van deze bachelorproef kan dus gesteld worden dat, hoewel er modellen gevonden werden die verder getraind kunnen worden, het uiteindelijke doel van het onderzoek niet behaald werd. Er werden echter wel manieren bedacht hoe verder onderzoek kan leiden tot een beter resultaat dat wel in de applicatie voor elderspeak detectie kan geïmplementeerd worden. Deze opties voor verder onderzoek bestaan uit het toepassen van een ruisfilter op de audio bestanden, het trainen op significant meer data en het trainen op twee verschillende databanken.
+Als conclusie van deze bachelorproef kan dus gesteld worden dat, hoewel er modellen gevonden werden die verder getraind kunnen worden, het uiteindelijke doel van het onderzoek niet behaald werd. Er werden echter wel manieren bedacht hoe verder onderzoek kan leiden tot een beter resultaat dat wel in de applicatie voor elderspeak detectie kan geïmplementeerd worden. Deze opties voor verder onderzoek bestaan uit het trainen op significant meer data, het trainen op twee verschillende databanken en ervoor zorgen dat de audio die in het Zorglab opgenomen wordt een betere kwaliteit heeft.
