--- a/bachproef/resultaten.tex
+++ b/bachproef/resultaten.tex
@@ -21,7 +21,7 @@ Om een pyannote.audio model te trainen is een pyannote databank nodig. Hoe je de
 De basis van de databank is een YAML bestand waarin een databank en een protocol staan. De databank verwijst naar de plaats waar de audio bestanden opgeslagen staan in de vorm van wav bestanden. Het protocol bestaat uit 3 subsets, namelijk een train subset die gebruikt wordt om het model te trainen, een development subset die gebruikt wordt als validatie en een test subset die gebruikt wordt voor de evaluatie van het model. Elk van deze subsets verwijzen naar een .rttm, .uem en .lst bestand. Het .rttm bestand bevat de annotatie van de audiofragmenten die gebruikt worden in de subset, het .uem bestand bevat de informatie over welke delen van de audio bestanden geannoteerd zijn voor de subset en het .lst bestand bevat een lijst met de namen van bestanden die gebruikt worden in de subset. De uiteindelijke set-up van het YAML bestand is te zien in codefragment ~\ref{code:config-file}.
 
 \begin{listing}
-	\begin{minted}[tabsize=4]{yaml}
+    \begin{minted}{yaml}
 Databases:
   BP: 
     - ../training_database/wavs/{uri}.wav
@@ -43,11 +43,54 @@ Protocols:
           uri: ../training_database/lists/test.lst
           annotation: ../training_database/rttms/test.rttm
           annotated: ../training_database/uems/test.uem
-	\end{minted}
+    \end{minted}
 	\caption[Configuratie databank]{\label{code:config-file}Inhoud van het configuratiebestand voor de databank}
 \end{listing}
 
-Tijdens het verloop van het trainen waren er twee versies van de databank. De eerste versie bestond enkel uit audio van televisieprogramma's. In de tweede versie werd er data toegevoegd die gedurende voorgaande jaren opgenomen werd in het Zorglab.
+Tijdens het verloop van het trainen waren er drie versies van de databank. De eerste versie bestond enkel uit audio van televisieprogramma's. In de tweede versie werd er data toegevoegd die gedurende voorgaande jaren opgenomen werd in het Zorglab. In de derde versie werd een herverdeling gedaan van de data uit de eerste versie.
+
+Voor de keuze van de gebruikte audio bestanden, waren er een aantal zaken waarmee rekening gehouden werd. Het voornaamste waarnaar gekeken werd, was de duur van het audio fragment. Er werd gekozen om vooral gebruik te maken van audio fragmenten die niet langer waren dan 5 tot 10 minuten, omdat langere bestanden meer tijd en resources nodig zouden hebben om te verwerken. Een andere factor die meespeelde bij het zoeken naar audio fragmenten was de hoeveelheid overlap er was tussen de stemmen. Er werd gekozen om vooral fragmenten te gebruiken met minder overlap, omdat dit anders voor een te hoge complexiteit van de bestanden zou zorgen.
+
+Wanneer het komt op de verdeling van de data over de train, test en validatie bestanden, werden er enkel rekening gehouden met de hoeveelheid data die voor elke set gebruikt zou worden. \textcite{BredinDatabase} raadt aan om een verdeling van 0.8-0.1-0.1 toe te passen. Dit houdt in dat 80\% van de data gebruikt wordt voor het trainen, 10\% voor het testen en 10\% voor de validatie.
+
+Bij de eerste versie van de databank werden niet alle audio bestanden die gevonden werden gebruikt in het opstellen van de databank, omdat het oorspronkelijke doel was meer data toe te voegen na een eerste test, maar uiteindelijk gekozen werd om data uit de audio van het Zorglab te gebruiken. Er werd gebruik gemaakt van fragmenten uit 10 audio bestanden en de .rttm files omvatten een totaal van 168 lijnen. In tabel \ref{tbl:verdeling-v1} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld.
+
+\begin{table}[]
+    \begin{tabular}{@{}lcc@{}}
+        \toprule
+                             & \multicolumn{1}{l}{\textbf{Aantal bestanden}} & \multicolumn{1}{l}{\textbf{Aantal lijnen}} \\ \midrule
+        \textbf{Train}       & 7                                             & 129                                        \\
+        \textbf{Test}        & 2                                             & 16                                         \\
+        \textbf{Development} & 1                                             & 23                                         \\ \bottomrule
+    \end{tabular}
+    \caption[Verdeling data eerste versie databank]{\label{tbl:verdeling-v1}Verdeling van de data over de train, test en validatie bestanden in de eerste versie van de databank}
+\end{table}
+
+Voor de tweede versie van de databank werd de data uit de audiobestanden van het Zorglab toegevoegd aan de eerste versie van de databank. Hiervoor werd gebruik gemaakt van fragmenten uit 7 bestanden wat leidde tot een totaal van 394 lijnen in de .rttm files. In tabel \ref{tbl:verdeling-v2} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld. Ook hier werd voor de verdeling van de data over de train, test en validatie bestanden niet met specifieke criteria rekening gehouden, behalve dat elke subset minstens een bestand van het Zorglab bevat.
+
+\begin{table}[]
+    \begin{tabular}{@{}lcc@{}}
+        \toprule
+        & \multicolumn{1}{l}{\textbf{Aantal bestanden}} & \multicolumn{1}{l}{\textbf{Aantal lijnen}} \\ \midrule
+        \textbf{Train}       & 12                                            & 316                                        \\
+        \textbf{Test}        & 2                                             & 37                                         \\
+        \textbf{Development} & 2                                             & 41                                         \\ \bottomrule
+    \end{tabular}
+    \caption[Verdeling data tweede versie databank]{\label{tbl:verdeling-v2}Verdeling van de data over de train, test en validatie bestanden in de tweede versie van de databank}
+\end{table}
+
+Voor de derde versie van de databank werd teruggegrepen naar de data uit de eerste versie van de databank, met als verschil dat er een herverdeling van de data plaatsvond over de train, test en validatie subsets. Bij deze herverdeling werd ervoor gezorgd dat de verdeling van het aantal lijnen in de .rttm bestanden iets dichter ligt bij de 0.8-0.1-0.1 verdeling en dat er voor zowel de test als de validatie subset gebruik gemaakt wordt van de data van 2 audio bestanden. De verdeling van deze versie van de databank wordt voorgesteld in tabel \ref{tbl:verdeling-v3}.
+
+\begin{table}[]
+    \begin{tabular}{@{}lcc@{}}
+        \toprule
+        & \multicolumn{1}{l}{\textbf{Aantal bestanden}} & \multicolumn{1}{l}{\textbf{Aantal lijnen}} \\ \midrule
+        \textbf{Train}       & 6                                             & 132                                        \\
+        \textbf{Test}        & 2                                             & 17                                         \\
+        \textbf{Development} & 2                                             & 19                                         \\ \bottomrule
+    \end{tabular}
+    \caption[Verdeling data tweede versie databank]{\label{tbl:verdeling-v3}Verdeling van de data over de train, test en validatie bestanden in de derde versie van de databank}
+\end{table}
 
 \section{Trainen en finetunen van het gekozen model}
 \label{sec:trainen}
@@ -66,7 +109,7 @@ Hier werd gekozen voor het gebruik maken van de offline pipeline, aangezien deze
 Na het inladen van de databank en het ophalen van de pipeline wordt de accuraatheid van de pipeline berekend door gebruik te maken van pyannote-metrics. Hiervoor creëert de pipeline eerst een RTTM bestand van de audio bestanden in de test subset van de databank. Hierna wordt dit vergeleken met de RTTM bestanden in de test subset en op basis daarvan wordt de DER berekend. De code die hiervoor gebruikt wordt, is te zien in codefragment \ref{code:pyannote-metrics}.
 
 \begin{listing}
-	\begin{minted}{python}
+\begin{minted}{python}
 from pyannote.metrics.diarization import DiarizationErrorRate
 
 metric = DiarizationErrorRate()
@@ -77,7 +120,7 @@ for file in protocol.test():
   metric(file["annotation"], file["pretrained pipeline"], uem=file["annotated"])
 
 print(f"Diarization error rate is {100 * abs(metric):.1f}% for the pretrained model")
-	\end{minted}
+\end{minted}
 	\caption[Berekening DER met pyannote-metrics]{\label{code:pyannote-metrics}Berekening van de accuraatheid van de speaker diarization pipeline}
 \end{listing}
 
@@ -231,8 +274,11 @@ De dataset voor het trainen was in het begin opgebouwd met duidelijke audio van 
 
 Hierdoor werd besloten om de databank aan te passen. Er werd data uit het Zorglab toegevoegd aan alle subsets in de databank en het trainingsproces werd opnieuw uitgevoerd. Hierbij was de DER van de pipeline voor het trainen gelijk aan 20.9\%, wat significant hoger is dan bij de data uit de eerste versie van de databank. Na het trainen van het model op de nieuwe data was de DER hoger in plaats van lager, namelijk 56.4\%, wat een onverwachte uitkomst was. In een poging om dit resultaat te verbeteren, werd er extra data toegevoegd aan de subset voor het trainen en werd geëxperimenteerd met het aantal epochs in \lstinline{max_epochs} van het trainen. Het beste resultaat dat hierdoor bekomen werd was een DER van 50.6\% bij een waarde van 50 voor \lstinline{max_epochs}.
 
-\section{Gebruik maken van het getrainde model}
-\label{sec:gebruik}
+Aangezien het trainen met de nieuwe databank niet het gewenste resultaat gaf, werd er besloten om een ruisfilter toe te passen op de audiobestanden van het Zorglab en aan de hand van die bestanden het trainingsproces opnieuw uit te voeren. De ruisfilter die hiervoor gebruikt werd, is deze die door \textcite{Daems2023} reeds geïmplementeerd werd in de applicatie. Dit leverde voor het trainen een DER van 22.5\% op en na het trainen een DER van 52.3\%.
+
+Hierdoor werd besloten om uiteindelijk toch verder te gaan met de eerste versie van de databank, mits een herverdeling van de data over de files, die dus leidde tot de derde versie van de databank die in sectie \ref{sec:data} beschreven is. De resultaten hiervoor waren een DER van 23.4\% voor het trainen en 13.9\% na het trainen.
+
+\section{Gebruik maken van het getrainde model}\label{sec:gebruik}
 Om de getrainde pipeline te gebruiken in een andere file, moet deze opnieuw opgebouwd worden met de het getrainde model en de parameters die opgeslagen werden na de finetuning. Dit gebeurt in twee stappen, aangezien de drempelwaardes die gevonden worden tijdens het finetunen geen parameters zijn in de oorspronkelijke pipeline. De eerste stap haalt de opgeslagen pipeline op en wordt geïnstantieerd met alle opgeslagen parameters behalve de drempelwaarden. Dit wordt getoond in codefragment \ref{code:eerste-stap}.
 
 De tweede stap creëert een pipeline met de modellen uit de opgehaalde pipeline en wordt geïnstantieerd met alle opgeslagen parameters, inclusief de drempelwaarden. Dit wordt getoond in codefragment \ref{code:tweede-stap}.
